# world-embedding

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
assets/: .gitkeep
data/: README.md  world_embedding_regime_labels.csv
docs/: SEARCH_CONSOLE.md  index.html
examples/: bond_spanning.py  quickstart.py  regime_analysis.py
replication/: __init__.py  config.py  evaluate.py  expanding_windows.py  train.py
replication/data/: assemble.py  download_all.py
replication/model/: __init__.py  vq.py
scripts/: covid_era_extension.py  historical_analog_case_study.py  plot_regime_tsne.py  spanning_puzzle.py
worldembedding/: __init__.py  core.py
worldembedding/model/: __init__.py  decoder.py  dssde.py  encoder.py  loss.py
