[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldembedding"
version = "0.1.0"
description = "World Embedding: a daily multimodal representation of the aggregate economic state"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Elham Tabatabaei", email = "elliettb@schulich.yorku.ca"},
]
keywords = [
    "economics",
    "finance",
    "embedding",
    "machine-learning",
    "bond-risk-premia",
    "macro-finance",
    "state-representation",
    "deep-learning",
    "time-series",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
replication = [
    "torch>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "yfinance>=0.2.31",
    "fredapi>=0.5.1",
    "requests>=2.31",
    "openpyxl>=3.1",
    "statsmodels>=0.14",
]

[project.urls]
Homepage = "https://github.com/elittb/world-embedding"
Paper = "https://papers.ssrn.com/abstract=6503446"
Issues = "https://github.com/elittb/world-embedding/issues"

[tool.setuptools.packages.find]
include = ["worldembedding*"]

[tool.setuptools.package-data]
worldembedding = ["py.typed"]
